# led-wire-driver

./: .gitignore  Cargo.toml  README.md
src/: backend.rs  error.rs  host.rs  lib.rs  model.rs  setup.rs  test_support.rs
src/api/: backend.rs  channel.rs  driver.rs  error_map.rs  errors.rs  mod.rs  setup.rs  tests.rs  types.rs
src/driver/: mod.rs
src/driver/engine/: channel_state.rs  error.rs  mask.rs  mod.rs  prepared_write.rs  registration.rs  runtime.rs
src/driver/pack/: mod.rs  pipeline.rs
src/engine/: error.rs  mod.rs  prepared_write.rs  registration.rs  runtime.rs  tests.rs  write.rs
src/engine/types/: frame.rs  mask.rs  mod.rs  write_target.rs
src/pack/: convert.rs  error.rs  layout.rs  mod.rs  pipeline.rs  spatial.rs  temporal.rs
